--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "fd22e955-59d9-4d33-af65-18589d3615af"
 authors = ["MarkNahabedian <naha@mit.edu> and contributors"]
 version = "0.1.0"
 
+[deps]
+Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+
 [compat]
 julia = "1"
 
