--- a/Project.toml
+++ b/Project.toml
@@ -4,11 +4,12 @@ authors = ["MarkNahabedian <naha@mit.edu> and contributors"]
 version = "0.1.0"
 
 [deps]
+PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
-Pluto = "0.16"
+Pluto = "0.16, 0.17"
 julia = "1"
 
 [extras]
