--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,7 @@ Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
-Pluto = "0.16, 0.17"
+Pluto = "0.16, 0.17, 0.18, 0.19"
 julia = "1"
 
 [extras]
